<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>holoocean_ros2_bridge</name>
  <version>1.0.0</version>
  <description>
    ROS2 Humble bridge for HoloOcean v2.3.0 simulation.
    Converts HoloOcean SurfaceVessel sensor data (ProfilingSonar, IMU, GPS, DVL)
    to standard ROS2 messages for bathymetric mapping.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
